# todo

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TICKETS.md  google_oath.md  justfile  plan.md  pyproject.toml
.claude/agents/: just-quality-checker.md
api/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 0001_baseline.py  0002_todo_description.py
api/app/: auth.py  db.py  logging_.py  main.py  models.py  schemas.py  settings.py
api/app/routes/: contexts.py  events.py  meta.py  notes.py  snapshot.py  todos.py
api/app/services/: bootstrap.py  events.py  snapshot.py
api/scripts/: import_legacy.py
api/tests/: conftest.py  test_auth.py  test_consistency.py  test_contexts.py  test_events.py  test_notes.py  test_snapshot.py  test_todos.py
automation/: Dockerfile  entrypoint.sh  pyproject.toml
automation/flows/: snapshot_email.py
crates/todo-api-client/: Cargo.toml
crates/todo-api-client/src/: auth.rs  client.rs  config.rs  error.rs  lib.rs
crates/todo-api-client/tests/: client_tests.rs  config_tests.rs
crates/todo-fs/: Cargo.toml
crates/todo-fs/src/: config.rs  lib.rs  store.rs  types.rs  validate.rs
crates/todo-mailer/: Cargo.toml
crates/todo-mailer/src/: email.rs  main.rs
crates/todo-store/: Cargo.toml
crates/todo-store/src/: lib.rs
crates/todo-tui/: Cargo.toml
crates/todo-tui/src/: app.rs  editor.rs  main.rs  ui.rs
deploy/: .env.example  .env.prod.example  Caddyfile  docker-compose.prod.yml  docker-compose.yml  setup-server.sh
deploy/keycloak/: realm-todo.json
deploy/n8n/: GMAIL_OAUTH.md
deploy/n8n/workflows/: email-ingest.json  snapshot.json
src/: app.rs  editor.rs  main.rs  storage.rs  ui.rs
