[workspace]
resolver = "2"
members = ["crates/todo-store", "crates/todo-tui", "crates/todo-mailer"]

[workspace.package]
edition = "2021"
version = "0.2.0"

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"

[profile.release]
lto = true
codegen-units = 1
strip = true
