[workspace]
resolver = "2"
members = [
    "crates/todo-fs",
    "crates/todo-tui",
]

[workspace.package]
edition = "2021"
version = "0.4.0"

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
ratatui = "0.29"
crossterm = "0.28"

[profile.release]
lto = true
codegen-units = 1
strip = true
