[project]
name = "todo-automation"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "prefect>=3.0",
    "httpx>=0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF"]
