[package]
name = "todo-api-client"
version.workspace = true
edition.workspace = true

[dependencies]
todo-store = { path = "../todo-store" }
anyhow.workspace = true
chrono.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
reqwest.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
tempfile = "3"
