[package]
name = "todo-tui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "todo-tui"
path = "src/main.rs"

[dependencies]
todo-store = { path = "../todo-store" }
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
ratatui = "0.29"
crossterm = "0.28"
