[package]
name = "todo-tui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "todo"
path = "src/main.rs"

[dependencies]
todo-fs = { path = "../todo-fs" }
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
serde.workspace = true
toml.workspace = true
ratatui.workspace = true
crossterm.workspace = true
